[package]
authors = ["Jacek Całusiński <forger@forger.pl>"]
name = "nanomsg-tokio"
version = "0.1.0"

[dependencies]
chrono = "0.4.0"
flexi_logger = "0.6.8"
futures = "0.1.15"
libc = "0.2.30"
log = "0.3.8"
mio = "0.6.10"
tokio-core = "0.1.9"

[dependencies.colored_logger]
git = "ssh://git@github.com/FCG-LLC/colored_logger.git"
optional = false

[dependencies.nanomsg]
git = "ssh://git@github.com/FCG-LLC/nanomsg-rs.git"
