[package]
authors = ["Jacek Całusiński <forger@forger.pl>"]
name = "nanomsg-tokio"
version = "0.1.0"

[dependencies]
futures = "0.1.17"
libc = "0.2.35"
log = "0.4.1"
mio = "0.6.12"
tokio-core = "0.1.12"

[dependencies.nanomsg]
git = "ssh://git@gitlab.cs.int/rust/nanomsg-rs.git"

[dev-dependencies]
flexi_logger = "0.6.11"

[dev-dependencies.colored_logger]
git = "ssh://git@gitlab.cs.int/rust/colored-logger.git"
optional = false

