[package]
authors = ["Jacek Całusiński <forger@forger.pl>"]
name = "nanomsg-tokio"
version = "0.1.0"
edition = "2018"

[dependencies]
futures = "^0.1.29"
libc = "0.2.66"
log = "0.4.8"
mio = "0.6.21"
tokio-core = "0.1.17"
nanomsg = "0.7.2"

[dev-dependencies]
flexi_logger = "0.14.8"

[dev-dependencies.colored_logger]
git = "https://github.com/forgerpl/colored_logger.git"
optional = false

